--- a/index.html
+++ b/index.html
@@ -6,17 +6,28 @@
     <link rel="stylesheet" href="/css/fontawesome-free-6.6.0-web/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="style.css">
     <title>Colorlib Template philosophy</title>
 </head>
-<body>  <!-- Loader container -->
-    <div class="loader-container">
-     <div class="loader"></div>
-    </div>
-            <!-- header section -->
+<body> 
+     <!-- Loading Line -->
+  <div class="loading-line"></div>
+       
+        <!-- Loader Container -->
+        <div class="loader-container">
+            <div class="line-scale">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+
+            <!--========================== header section======================== -->
             <header>
                 <nav class="headerNav" id="#header">
-                    <h1><img src="/image/logo (1).png" alt="Logo" class="Logo"></h1>
+                    <h1><img src="image/logo (1).png" alt="Logo" class="Logo"></h1>
                     <div class="dropdown">
                         <label for="dropdown-toggle" class="dropbtn">philosophy</label>
                         <input type="checkbox" id="dropdown-toggle">
@@ -44,12 +55,37 @@
                    </div>
                 </div>  
             </header>
+            <!--========================== end header section======================== -->
 
-            <nav>
-                <div class="nav-container">
-                    <div class="nav-social-icon"></div>
-                    <div></div>
-                </div>
-            </nav>
-</body>
+   <!--========================== Navbar section======================== -->
+  <!-- pageheader
+    ================================================== -->
+ <section class="Home">
+    <div class="Home-content">
+        <div class="uprow">
+
+            <div class="Home-content_logo">
+                <a class="logo" href="index.html">
+                    philosophy.
+                </a>
+            </div>
+            <ul class="Home-content_social">
+                <li>
+                    <a href="facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                    <a href="#0"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="#0"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="#0"><i class="fa-brands fa-pinterest"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+   </section>
+
+ </body>
 </html>
